Fixed alignment issue in mobile view

--- a/form.css
+++ b/form.css
@@ -62,6 +62,7 @@ main {
 #group-drop-areas {
   display: flex;
   gap: 1.5rem;
+  align-items: start; /* Don't stretch downwards if sibling grows when adding files */
 }
 @media only screen and (max-width: 600px) {
   main {
@@ -69,6 +70,7 @@ main {
   }
   #group-drop-areas {
     flex-direction: column;
+    align-items: stretch;
   }
 }
 
@@ -83,7 +85,6 @@ main {
   display: flex;
   flex-direction: column;
   overflow-x: visible;
-  align-self: start; /* Don't stretch if sibling grows */
 }
 
 .drop-area.highlight {
